# ridgeback

./: README.md  dependencies.rosinstall
ridgeback_control/: CMakeLists.txt  mecanum_drive_controller_plugin.xml  mecanum_drive_controller_plugins.xml  package.xml
ridgeback_control/config/: control.yaml  ekf.yaml  mecanum_drive_controller_parameters.yaml  rosserial_start.sh  teleop_ps3.yaml  teleop_ps4.yaml  twist_mux.yaml
ridgeback_control/include/mecanum_drive_controller/: mecanum_drive_controller.h  mecanum_drive_controller.hpp  mecanum_drive_controller_base.h  odometry.h  odometry.hpp  rolling_mean_accumulator.hpp  speed_limiter.hpp  visibility_control.h
ridgeback_control/launch/: control.launch  control.launch.py  control.launch.xml  teleop.launch  teleop.launch.py  teleop.launch.xml
ridgeback_control/src/: mecanum_drive_controller.cpp  mecanum_drive_controller_base.cpp  odometry.cpp  speed_limiter.cpp
ridgeback_control/test/: test_accumulator.cpp  test_common.hpp  test_load_mecanum_drive_controller.cpp  test_mecanum_drive_controller.cpp
ridgeback_control/test/config/: test_mecanum_drive_controller.yaml
ridgeback_description/: CMakeLists.txt  package.xml
ridgeback_description/launch/: description.launch  description.launch.py
ridgeback_description/urdf/: accessories.urdf.xacro  ridgeback-temp.gazebo  ridgeback.gazebo  ridgeback.ros2_control.xacro  ridgeback.urdf  ridgeback.urdf.xacro
ridgeback_msgs/: CMakeLists.txt  package.xml
ridgeback_msgs/msg/: Status.msg
ridgeback_navigation/: CMakeLists.txt  package.xml
ridgeback_navigation/launch/: odom_navigation_demo.launch
ridgeback_navigation/launch/include/: amcl.launch  gmapping.launch  move_base.launch
