<?xml version="1.0"?>
<package format="3">
  <name>ridgeback_control</name>
  <version>0.3.2</version>
  <description>Controllers for Ridgeback</description>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ridgeback_control</url>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>builtin_interfaces</build_depend>

  <depend>backward_ros</depend>
  <depend>eigen</depend>
  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>generate_parameter_library</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>realtime_tools</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>urdf</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>interactive_marker_twist_server</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>twist_mux</exec_depend>

  <export>
<!--    <controller_interface plugin="${prefix}/mecanum_drive_controller_plugins.xml"/>-->
    <build_type>ament_cmake</build_type>
  </export>
</package>
